# orchardseal

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cmake/: CompilerOptions.cmake
docs/: architecture.md  building.md  release.md
include/orchardseal/: version.h.in
scripts/: build.sh  deterministic_gzip.cpp  package.sh  test.sh
src/cli/: application.cpp  application.h  main.cpp  options.cpp  options.h
src/common/: base64.cpp  base64.h  common.h  file_system.cpp  file_system.h  hash.cpp  hash.h  json.cpp  json.h  logger.cpp  logger.h  mach-o.h  stopwatch.cpp  stopwatch.h  utility.cpp  utility.h  zip_archive.cpp  zip_archive.h
src/core/: app_bundle.cpp  app_bundle.h  audit.cpp  audit.h  audit_report.cpp  certificate_check.cpp  code_signature.cpp  code_signature.h  macho_file.cpp  macho_file.h  macho_slice.cpp  macho_slice.h  metadata.cpp  signing_asset.cpp  signing_asset.h
src/platform/windows/: common_win32.h  getopt.cpp  getopt.h  orchardseal.manifest.in  windows_text_converter.cpp  windows_text_converter.h
tests/: README.md
tests/cmake/: archive_safety.cmake  audit_smoke.cmake  cli_contract.cmake  malformed_macho.cmake
tests/fixtures/dylib/demo/: Makefile
tests/fixtures/linux/: test.sh
tests/fixtures/macho/: arm64-executable  malformed-load-command
tests/fixtures/macos/: test.sh
tests/fixtures/windows/: test.ps1
tests/unit/: base64_test.cpp  common_safety_test.cpp  macho_slice_test.cpp
